testing_progress.txt
TEST SUITE PROGRESS TRACKER 

    (last update: 12/2/15, 2:10pm)


----------------------
PRINT
----------------------

Working:
> int_list foo = (print()) [42]; 

Not Working:
> str_list foo = (print()) ["foo"];


Output from "str_list print":

adding stmt 
in vdec 
adding assignment 
trying to add a var 
adding symbol 
in symbol 
through table 
got vars 
foo Nulled??got global variables 
verifying function 
in update 
print Nulled3??Fatal error: exception Failure("Illigal function call print on argument ")


---------------------
ARITHMETIC
---------------------

Working:
> test_arith_add1
> test_arith_sub1
> test_arith_mult1
> test_arith_div1

Not Working:
> test_arith_add2



---------------------
PLAY NOTE
---------------------

Working:
> test_play_note



------------------
FUNK
------------------

Working:
> test_funk_decl

Kinda Working:
> test_funk_print       (.java and .class files generated)


    ```````````````````````````````````````````````````````````````````````````````
    [ua2144@uzo marmalade]$ ./marmac tests_new/test_funk_print.marm test_funk_print
    // Passed semantic checking 
    
    adding stmt 
    in vdec 
    adding assignment 
    trying to add a var 
    adding symbol 
    in symbol 
    trying to add function
    adding symbol 
    in symbol 
    adding blockadding stmt 
    through table 
    got vars 
    swag Nulled??got global variables 
    verifying function 
    in update 
    marmout Nulled3??marmout *Nulled??marmout Nulled3??main Nulled6??verifying function 
    in update 
    marmout Nulled6??test_funk_print.java:13: error: '}' expected
    swag = new int [] {42.marmout();/n};
                          ^
    test_funk_print.java:13: error: -> expected
    swag = new int [] {42.marmout();/n};
                                   ^
    test_funk_print.java:13: error: not a statement
    swag = new int [] {42.marmout();/n};
                                 ^
    test_funk_print.java:13: error: ';' expected
    swag = new int [] {42.marmout();/n};
                                      ^
    test_funk_print.java:15: error: class, interface, or enum expected
    }}
    `````````````````````````````````````````````````````````````````````````````````
    
    
Not Working:
>
>



----------------------
HELLO WORLD
----------------------

To be split into multiple tests.



------------------
CONDITIONAL
------------------

To do.


